<resources>
    <string name="app_name">Firebase-Blog</string>
    <string name="btn_email_authentication">Email Authentication</string>
    <string name="header_login">Login</string>
    <string name="header_signup">Signup</string>
    <string name="btn_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signup_prompt">Don\'t have an account? Signup.</string>
    <string name="btn_signup">Signup</string>
    <string name="login_prompt">Already have an account? Login.</string>
    <string name="hint_username">Username</string>
    <string name="forgot_password_prompt">Forgot Password ?</string>
    <string name="btn_send_email">Send Email</string>
    <string name="header_forgot_password">Forgot Password</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="label_email">Email : </string>
    <string name="label_username">Username : </string>
    <string name="label_id">Id : </string>
    <string name="label_loading">Loading &#8230;</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_phone_authentication">Phone Authentication</string>
    <string name="header_phone_number">OTP Verification</string>
    <string name="sub_header_phone_number">We will send you a one-time password to this mobile number</string>
    <string name="sub_header_verify_otp">Enter the OTP sent to %s</string>
    <string name="btn_get_otp">Get OTP</string>
    <string name="btn_verify_otp">Verify OTP</string>
</resources>