<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.phone_authentication.OtpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/header_phone_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otpSubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        tools:text="@string/sub_header_verify_otp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />


    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCode6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/otp_et_bg"
            android:elevation="4dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="22sp"
            tools:hint="5" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOtpVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn_verify_otp"
        android:textAllCaps="false" />

</LinearLayout>